--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.0.38",
+    "@types/react-native": "^0.71.6",
+    "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0"
+    "eslint-plugin-react-native": "^4.0.0",
+    "typescript": "^5.0.4"
   },
   "private": true
 }
