--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "strict": true,
     "target": "esnext"
   },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
   "exclude": [
     "node_modules",
     "babel.config.js",
