--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
